# Nex_Alignment

./: .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  INFO.md  README.md  START_HERE.md
.AppName/: APPNAME.md
audit_outputs/: README.md
core/: README.md  adoption_maturity_levels.md  agent_autonomy_and_human_oversight.md  architecture_design.md  automation_and_scalability.md  coding_guidelines.md  risk_classification.md  (+9 more)
mcp-server/: .gitignore  Cargo.toml  MCP_SERVER_REVIEW.md  README.md  VERIFICATION_CHECKLIST.md  test-mcp-communication.ps1
mcp-server/config/: agent_definitions.yaml
mcp-server/migrations/: init.sql
mcp-server/plans/: session-2026-02-11-example.yaml
mcp-server/src/: lib.rs  main.rs
mcp-server/src/config/: agent_definitions.rs  mod.rs
mcp-server/src/db/: connection.rs  mod.rs  queries.rs
mcp-server/src/nap/: integration.rs  mod.rs
mcp-server/src/orchestration/: dispatcher.rs  mod.rs  parser.rs  validator.rs
mcp-server/src/protocol/: mod.rs  responses.rs  server.rs  tools.rs
mcp-server/src/reports/: mod.rs  models.rs  repository.rs
mcp-server/src/review/: mod.rs  models.rs  system.rs
mcp-server/src/session/: manager.rs  mod.rs  models.rs
mcp-server/test-artifacts/: 01_task_header_spoof.md  02_requirements_spoof.md  03_hazard_log_spoof.md  04_runtime_behavioral_contracts_spoof.yaml  05_interaction_contract_spoof.yaml  06_traceability_matrix_spoof.csv  07_design_and_controls_spoof.md  08_telemetry_events_spoof.json  09_residual_risk_spoof.md  run_alignment_spoof_test.ps1
mcp-server/tests/: integration_test.rs
(+61 files in other folders)
