[package]
name = "nap-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full", "net", "macros", "io-util"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "chrono", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
notify = { version = "6.1", features = ["macos_kqueue"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[lib]
name = "nap_mcp_server"
path = "src/lib.rs"

[[bin]]
name = "nap-mcp-server"
path = "src/main.rs"
